--- a/site/package.json
+++ b/site/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "^6.0.2",
+    "globule": "^0.2.0",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.0",
     "grunt-browser-sync": "^2.1.2",
