--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,32 @@
 {
   "name": "lordoffreaks/puzzle",
   "description": "Simple static sites with Laravel's Blade + Grunt + REST server.",
-  "keywords": ["blade", "laravel", "static", "site", "generator", "grunt", "REST"],
   "homepage": "http://github.com/lordoffreaks/puzzle",
   "license": "MIT",
+  "keywords": [
+    "blade",
+    "laravel",
+    "static",
+    "site",
+    "generator",
+    "grunt",
+    "REST"
+  ],
   "authors": [
     {
       "name": "Alejandro Tabares",
       "email": "alex311es@gmail.com"
     }
   ],
+  "require": {
+    "php": ">=5.4.0",
+    "jigsaw/jigsaw": "^0.4.1",
+    "league/route": "^1.2"
+  },
   "autoload": {
     "psr-4": {
       "Puzzle\\": "src/"
     }
-  },
-  "require": {
-    "php": ">=5.4.0",
-    "jigsaw/jigsaw": "^0.4.1",
-    "league/route": "^1.2",
-    "monolog/monolog": "^1.17",
-    "respect/validation": "^1.0",
-    "swiftmailer/swiftmailer": "^5.4",
-    "voku/anti-xss": "^1.2"
   },
   "bin": [
     "puzzle"
