--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   ],
   "require": {
     "php": ">=5.4.0",
-    "jigsaw/jigsaw": "^0.4.1",
-    "league/route": "^1.2"
+    "league/route": "^1.2",
+    "tightenco/jigsaw": "^0.6.4"
   },
   "autoload": {
     "psr-4": {
